unpackaged/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Accomplished_Results_in_the_day__c</fullName>
        <label>Accomplished Results in the day</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>WEEKDAY(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_Level_Work_Plan__c</fullName>
        <label>High Level Work Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Login__c</fullName>
        <label>Login Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Logout__c</fullName>
        <label>Location Logout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Login_Address__c</fullName>
        <label>Login Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Login_Location__c</fullName>
        <label>Login coordinate</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Login_Time__c</fullName>
        <label>Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logout_Address__c</fullName>
        <label>Logout Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logout_Location__c</fullName>
        <label>Logout Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Logout_Time__c</fullName>
        <label>Logout Time</label>
        <type>DateTime</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Date__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Todays_Attendance</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Date__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Attendance</label>
    </listViews>
    <nameField>
        <displayFormat>ATT-{0000}</displayFormat>
        <label>Attendance #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>